--- a/src/MSetExplorer/App.config
+++ b/src/MSetExplorer/App.config
@@ -8,6 +8,7 @@
             <section name="MSetExplorer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
+
     <userSettings>
         <MSetExplorer.Properties.Settings>
             <setting name="ShowTopNav" serializeAs="String">
@@ -29,13 +30,13 @@
     </userSettings>
     <applicationSettings>
         <MSetExplorer.Properties.Settings>
-            <setting name="MongoDbServer" serializeAs="String">
-                <value>desktop-bau7fe6</value>
+            <setting name="MongoDbServerx" serializeAs="String">
+                <value />
             </setting>
-            <setting name="MondogDbPort" serializeAs="String">
+            <setting name="MongoDbPortx" serializeAs="String">
                 <value>27017</value>
             </setting>
-            <setting name="MongoDbName" serializeAs="String">
+            <setting name="MongoDbNamex" serializeAs="String">
                 <value>MandelbrotProjects</value>
             </setting>
         </MSetExplorer.Properties.Settings>
