The ColorBandSetHistogramControl is zooming and panning correctly.

--- a/src/MSetExplorer/App.config
+++ b/src/MSetExplorer/App.config
@@ -9,7 +9,14 @@
         </sectionGroup>
     </configSections>
 
-    <userSettings>
+  <appSettings>
+    <add key="MongoDbServer" value="desktop-bau7fe6" />
+    <add key="MongoDbPort" value="27017" />
+    <add key="MongoDbName" value="MandelbrotProjects" />
+  </appSettings>
+
+
+  <userSettings>
         <MSetExplorer.Properties.Settings>
             <setting name="ShowTopNav" serializeAs="String">
                 <value>False</value>
