--- a/src/WpfMapDisplayPOC/WpfMapDisplayPOC.csproj
+++ b/src/WpfMapDisplayPOC/WpfMapDisplayPOC.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-    <Platforms>AnyCPU;x64</Platforms>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
