The MapSectionService is working using un-pooled MapSectionVector instances.

--- a/src/MEngineService/MEngineService.csproj
+++ b/src/MEngineService/MEngineService.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\MapSectionProviderLib\MapSectionProviderLib.csproj" />
     <ProjectReference Include="..\MEngineDataContracts\MEngineDataContracts.csproj" />
+    <ProjectReference Include="..\MSetGeneratorPrototype\MSetGeneratorPrototype.csproj" />
     <ProjectReference Include="..\MSetRepo\MSetRepo.csproj" />
     <ProjectReference Include="..\MSS.Common\MSS.Common.csproj" />
   </ItemGroup>
