--- a/src/MEngineService/Properties/launchSettings.json
+++ b/src/MEngineService/Properties/launchSettings.json
@@ -7,8 +7,8 @@
       },
       "dotnetRunMessages": "true",
       "nativeDebugging": false,
-      "applicationUrl": "http://localhost:5000;https://localhost:5001"
-      //"applicationUrl": "http://192.168.2.106:5000"
+      //"applicationUrl": "http://localhost:5000;https://localhost:5001"
+      "applicationUrl": "http://192.168.2.100:5000"
 
     }
   }
