--- a/src/MapSectionProviderLib/MapSectionProviderLib.csproj
+++ b/src/MapSectionProviderLib/MapSectionProviderLib.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MSS.Common\MSS.Common.csproj" />
+    <ProjectReference Include="..\ProjectRepo\ProjectRepo.csproj" />
   </ItemGroup>
 
 </Project>
