Simplified the JobQueues class: a cmd argument was not useful. Created the MsrJob type to hold the properties that have a common value for a set of MapSectionRequests.

--- a/src/MapSectionProviderLib/MapSectionProviderLib.csproj
+++ b/src/MapSectionProviderLib/MapSectionProviderLib.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Support\TestJobQueues.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Support\TestJobQueues.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MSS.Common\MSS.Common.csproj" />
     <ProjectReference Include="..\ProjectRepo\ProjectRepo.csproj" />
   </ItemGroup>
