Fixed bug where the MapLoader's HandleResponse method was counting requests with a non-null mirror as 2 items, even though MapLoader always receives a single MapSection with each request. It is the MapSectionRequestProcessor's HandleResponse method that takes a single request with a mirror partner and creates two individual MapSections.

--- a/src/MapSectionProviderLib/MapSectionProviderLib.csproj
+++ b/src/MapSectionProviderLib/MapSectionProviderLib.csproj
@@ -6,6 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <DefineConstants>$(DefineConstants)</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <DefineConstants>$(DefineConstants)</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="Support\TestJobQueues.cs" />
   </ItemGroup>
