Removed the GetMapBlockOffset from the MapJobHelper class. The MapJobHelper class now calls RMapHelper.GetMapBlockOffset. Commented out the RPointRecord, RRectangleRecord and the RVector record as well as the RRectangleDto and RVectorDto classes as these are no longer being used. Removed the ToLongPairs method from the BigIntegerHelper class.

--- a/src/MSS.Types/MSS.Types.csproj
+++ b/src/MSS.Types/MSS.Types.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <Compile Remove="APValues\SpanClassExp.cs" />
+    <Compile Remove="DataTransferObjects\RRectangleDto.cs" />
+    <Compile Remove="DataTransferObjects\RVectorDto.cs" />
     <Compile Remove="Pools\MapSectionVectors2Pool.cs" />
   </ItemGroup>
 
@@ -19,6 +21,8 @@
 
   <ItemGroup>
     <None Include="APValues\SpanClassExp.cs" />
+    <None Include="DataTransferObjects\RRectangleDto.cs" />
+    <None Include="DataTransferObjects\RVectorDto.cs" />
     <None Include="Pools\MapSectionVectors2Pool.cs" />
   </ItemGroup>
 
