--- a/src/MSetExplorer/MSetExplorer.csproj
+++ b/src/MSetExplorer/MSetExplorer.csproj
@@ -16,12 +16,14 @@
 
   <ItemGroup>
     <Compile Remove="ColorBandSetHistogram\Support\CbsSelectionLineFirstDraft.cs" />
+    <Compile Remove="XPoc\RValueParsing\MapCoordsEdTestViewModel.cs" />
     <Compile Remove="XPoc\SkiaSharpPOC\SkiaControl.cs" />
   </ItemGroup>
 
 
   <ItemGroup>
     <None Include="ColorBandSetHistogram\Support\CbsSelectionLineFirstDraft.cs" />
+    <None Include="XPoc\RValueParsing\MapCoordsEdTestViewModel.cs" />
     <None Include="XPoc\SkiaSharpPOC\SkiaControl.cs" />
   </ItemGroup>
 
