--- a/src/ImageBuilder/ImageBuilder.csproj
+++ b/src/ImageBuilder/ImageBuilder.csproj
@@ -1,14 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net6.0-windows10.0.20348.0</TargetFramework>
     <Platforms>x64</Platforms>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MSS.Common\MSS.Common.csproj" />
-    <ProjectReference Include="..\MSS.Types\MSS.Types.csproj" />
     <ProjectReference Include="..\PngImageLib\PngImageLib.csproj" />
   </ItemGroup>
 
