Added synchronous version of the MapSectionPersistProcessor. Created the MapSectionReaderWriters class. Began work to update the MapSectionAdapter to not hold on to database connections.

--- a/src/MSS.Common/MSS.Common.csproj
+++ b/src/MSS.Common/MSS.Common.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MSS.Types\MSS.Types.csproj" />
+    <ProjectReference Include="..\ProjectRepo\ProjectRepo.csproj" />
   </ItemGroup>
 
 </Project>
