--- a/src/ProjectRepo/ProjectRepo.csproj
+++ b/src/ProjectRepo/ProjectRepo.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MSS.Common\MSS.Common.csproj" />
+    <ProjectReference Include="..\MSS.Types\MSS.Types.csproj" />
   </ItemGroup>
 
 </Project>
