--- a/src/ImageBuilderWPF/ImageBuilderWPF.csproj
+++ b/src/ImageBuilderWPF/ImageBuilderWPF.csproj
@@ -7,4 +7,8 @@
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MSS.Common\MSS.Common.csproj" />
+  </ItemGroup>
+
 </Project>
